# fabaccess-server

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  INSTALL.md  README.md  build.rs  cargo-cross-config  docker-compose.yaml  i18n.toml  state.dot
api/: Cargo.toml  build.rs
api/src/: lib.rs  schema.rs
api/src/schema/: auth_capnp.rs  authenticationsystem_capnp.rs  connection_capnp.rs  general_capnp.rs  machine_capnp.rs  machinesystem_capnp.rs  main_capnp.rs  permissionsystem_capnp.rs  resource_capnp.rs  resources_capnp.rs  role_capnp.rs  space_capnp.rs  user_capnp.rs  users_capnp.rs  usersystem_capnp.rs  utils_capnp.rs
api/src/schema/programming_language/: csharp_capnp.rs  rust_capnp.rs
bffhd/: audit.rs  authentication.rs  config.rs  db.rs  env.rs  error.rs  keylog.rs  lib.rs  logging.rs  oid.rs  permissions.rs  resource.rs  resources.rs  state.rs  tls.rs  varint.rs
bffhd/actors/: dummy.rs  mod.rs  process.rs  shelly.rs
bffhd/authentication/: db.rs  mod.rs
bffhd/authentication/fabfire/: mod.rs  server.rs
bffhd/authentication/fabfire_bin/: mod.rs  server.rs
bffhd/authorization/: mod.rs  permissions.rs  roles.rs
bffhd/capnp/: authentication.rs  authenticationsystem.rs  config.rs  connection.rs  machine.rs  machinesystem.rs  mod.rs  permissionsystem.rs  session.rs  user.rs  user_system.rs  users.rs
bffhd/config/: dhall.rs  mod.rs
bffhd/db/: hash.rs  index.rs  mod.rs  raw.rs  resources.rs  state.rs  typed.rs  user.rs
bffhd/initiators/: dummy.rs  mod.rs  process.rs
bffhd/resource/: claim.rs  mod.rs
bffhd/resource/state/: db.rs  mod.rs  value.rs
bffhd/resources/: claim.rs  db.rs  driver.rs  mod.rs  search.rs
bffhd/resources/modules/: fabaccess.rs  mod.rs
bffhd/resources/state/: db.rs  mod.rs  value.rs
bffhd/server/: authentication.rs  mod.rs  resources.rs  session.rs
bffhd/session/: db.rs  mod.rs
bffhd/state/: value.rs
bffhd/users/: db.rs  mod.rs  pass.rs
bffhd/utils/: l10nstring.rs  linebuffer.rs  mod.rs  oid.rs  uuid.rs  varint.rs
docker/: startup.sh
docs/: connection-state.dot  draft-fabaccess-protocol.md
examples/: README.md  actor.sh  actors.dhall  bffh.dhall  init.py  machines.dhall  roles.dhall  self-signed-cert.pem  self-signed-key.pem  users.toml
examples/docker/: README.md  config.toml  docker-compose.yaml  machines.toml
examples/docker/basic/: docker-compose.yaml
examples/docker/basic/config/: bffh.dhall  roles.toml  users.toml
examples/docker/config/: bffh.dhall  users.toml
examples/docker/integration/: README.md  docker-compose.yaml
examples/docker/integration/config_a/: bffh.dhall
examples/docker/integration/config_b/: bffh.dhall
examples/types/: Machine.dhall
modules/dummy/: Cargo.toml
modules/dummy/src/: lib.rs
modules/sdk/: Cargo.toml
modules/sdk/sdk_proc/: Cargo.toml
modules/sdk/sdk_proc/src/: lib.rs
modules/sdk/sdk_proc/tests/: 01-parse-struct.rs  02-not-or-bad-struct.rs  02-not-or-bad-struct.stderr  progress.rs
modules/sdk/src/: lib.rs
modules/sdk/src/initiators/: mod.rs
runtime/asyncio/: Cargo.toml  gen.rs  gen2.rs  poem
runtime/asyncio/examples/: future.rs  raw.rs
runtime/asyncio/src/: cancellation.rs  completion.rs  cq.rs  cqe.rs  ctypes.rs  fs.rs  io_uring.rs  lib.rs  rtypes.rs  sq.rs  sqe.rs  submission.rs  syscall.rs
runtime/asyncio/src/sys/linux/: mod.rs
runtime/asyncio/src/sys/linux/io_uring/: driver.rs  fs.rs  mod.rs  ring.rs  submission.rs
runtime/asyncio/src/sys/linux/io_uring/events/: accept.rs  close.rs  connect.rs  epoll_ctl.rs  fadvise.rs  fallocate.rs  files_update.rs  fsync.rs  mod.rs  openat.rs  provide_buffers.rs  read.rs  readv.rs  recv.rs  send.rs  splice.rs  statx.rs  timeout.rs  write.rs  writev.rs
runtime/asyncio/src/sys/linux/io_uring/fs/: create.rs  open.rs
runtime/console/: Cargo.toml
runtime/console/src/: aggregate.rs  attribute.rs  callsites.rs  event.rs  id_map.rs  lib.rs  server.rs  stats.rs  visitors.rs
runtime/executor/: Cargo.toml
runtime/executor/benches/: perf.rs  spawn.rs  stats.rs
runtime/executor/examples/: spawn_async.rs
runtime/executor/src/: blocking.rs  lib.rs  manage.rs  placement.rs  pool.rs  proc_stack.rs  run.rs  supervision.rs  thread_manager.rs  worker.rs
runtime/executor/tests/: run_blocking.rs  thread_pool.rs
runtime/lightproc/: Cargo.toml
runtime/lightproc/examples/: proc_panic.rs  proc_run.rs  state_change.rs
runtime/lightproc/src/: lib.rs  lightproc.rs  proc_data.rs  proc_handle.rs  proc_layout.rs  proc_vtable.rs  raw_proc.rs  recoverable_handle.rs  state.rs
src/: access.rs  actor.rs  api.rs  audit.rs  auth.rs  builtin.rs  config.rs  connection.rs  db.rs  error.rs  initiator.rs  lib.rs  log.rs  machine.rs  machines.rs  main.rs  modules.rs  network.rs  oid.rs  permissions.rs  registries.rs  resource.rs  schema.rs  server.rs  space.rs  state.rs  varint.rs
src/api/: auth.rs  machine.rs  machines.rs  user.rs  users.rs
src/api/auth/: fabfire.rs
src/api/auth/fabfire/: server.rs
src/db/: access.rs  fix.rs  hash.rs  machine.rs  mod.rs  pass.rs  raw.rs  resources.rs  state.rs  typed.rs  user.rs
src/db/access/: adapter_lmdb.rs  internal.rs
src/db/machine/: internal.rs
src/db/user/: internal.rs
src/modules/: batch.rs  process.rs  shelly.rs
src/registries/: actuators.rs  sensors.rs
src/state/: mod.rs  value.rs
test/: duplicate-users.toml
tools/: git-pre-push-hook
