[package]
name = "diflouroborane"
version = "0.4.1"
authors = [ "dequbed <me@dequbed.space>"
          , "Kai Jan Kriegel <kai@kjkriegel.de>"
          , "Joseph Langosch <thejoklla@gmail.com>"
          , "Jannis Rieger <omniskopus@gmail.com>"
          ]
license = "GPL-3.0"
edition = "2021"
publish = false
readme = "README.md"

[profile.release]
opt-level = 3
debug = true
lto = "thin"

[lib]
path = "bffhd/lib.rs"

[[bin]]
name = "bffhd"
path = "bin/bffhd/main.rs"

[dependencies]
libc = "0.2.101"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.51"
pin-utils = "0.1.0"
futures-util = "0.3"

# Runtime
executor = { path = "runtime/executor" }

# Catch&Handle POSIX process signals
signal-hook = "0.3.9"

# Argument parsing for bin/bffhd.rs
clap = "2.33.3"

# Internal Databases
lmdb-rkv = "0.14.0"
rkyv = "0.7"
ptr_meta = "0.1"
rkyv_typename = "0.7"
rkyv_dyn = "0.7"
inventory = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Password hashing for internal users
rust-argon2 = "0.8.3"
rand = "0.8.4"

# Async aware logging and tracing
tracing = "0.1.28"
tracing-subscriber = "0.2.25"

# API
api = { path = "api" }
capnp = "0.14"
capnp-rpc = "0.14.1"

# API Authentication
rsasl = "2.0.0-preview2"

futures-signals = "0.3.22"
async-oneshot = "0.5"
async-channel = "1.6"

# Config and Database (De)Serialization
serde = { version = "1.0.130", features = ["derive"] }
erased-serde = "0.3"
serde_dhall = { version = "0.10.1", default-features = false }
serde_json = "1.0"

once_cell = "1.8"

rustls = "0.20"
futures-rustls = "0.22"

[dev-dependencies]
futures-test = "0.3.16"
tempfile = "3.2"
bincode = "1.3"

[workspace]
members = ["modules/*", "api"]