[package]
name = "api"
version = "0.3.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
generated = []
gen_static = []

[dependencies]
capnp = "0.14.3"
capnpc = "0.14.4"

[build-dependencies]
capnpc = "0.14.4"
# Used in build.rs to iterate over all files in schema/
walkdir = "2.3.2"
