[package]
name = "api"
version = "0.3.2"
edition = "2021"
build = "build.rs"
publish = false

[features]
generated = []
gen_static = []

[dependencies]
capnp = "0.14.3"
capnpc = "0.14.4"

[build-dependencies]
capnpc = "0.14.4"
# Used in build.rs to iterate over all files in schema/
walkdir = "2.3.2"