[package]
name = "asyncio"
version = "0.1.0"
edition = "2021"
description = "io_uring-first async I/O implementation"
readme = "README.md"
publish = false

[dependencies]
static_assertions = "1.1"
libc = "0.2"
nix = "0.23"
bitflags = "1.3"
ptr_meta = "0.1"

# SegQueue for task waiting on CQE or SQE being available again.
crossbeam-queue = "0.3"

# AsyncRead, AsyncWrite, AsyncSeek and related traits
futures-io = "0.3"

[dev-dependencies]
# As Mr. Torgue would put it: THE MOST EXTREME F*CKING ASYNC FUNCTION RUNNNER! EXPLOSIONS!
extreme = "666.666.666666"
futures-lite = "1.12"