[package]
name = "executor"
version = "0.3.0"
publish = false
description = "Executor"
authors = []
keywords = []
categories = []
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2021"
exclude = [
	"scripts/*",
]

[dependencies]
lightproc = { path = "../lightproc" }

crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
crossbeam-epoch = "0.9"
crossbeam-deque = "0.8.1"
lazy_static = "1.4"
libc = "0.2"
num_cpus = "1.13"
pin-utils = "0.1.0"

# Allocator
arrayvec = { version = "0.7.0" }
futures-timer = "3.0.2"
once_cell = "1.4.0"
lever = "0.1"
tracing = "0.1.19"
crossbeam-queue = "0.3.0"
