[package]
name = "executor"
version = "0.3.0"
publish = false
description = "Executor"
authors = []
keywords = []
categories = []
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2021"
exclude = [
	"scripts/*",
]

[[bench]]
name = "perf"
harness = false
path = "benches/perf.rs"

[[bench]]
name = "spawn"
harness = false
path = "benches/spawn.rs"

[[bench]]
name = "stats"
harness = false
path = "benches/stats.rs"

[dependencies]
lightproc = { path = "../lightproc" }

crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
crossbeam-epoch = "0.9"
crossbeam-deque = "0.8.1"
lazy_static = "1.4"
libc = "0.2"
num_cpus = "1.13"
pin-utils = "0.1.0"
parking_lot = "0.12"

# Allocator
arrayvec = { version = "0.7.0" }
futures-timer = "3.0.2"
once_cell = "1.4.0"
crossbeam-queue = "0.3.0"
hdrhistogram = "7.5"

# Stats & Tracing
tracing = "0.1"

# Supervision trees
sharded-slab = "0.1"
thread_local = "1.1"

[dev-dependencies]
async-std = "1.10.0"
tracing = { version = "0.1.19", features = ["max_level_trace"]}
tracing-subscriber = "0.3.1"
futures-util = "0.3"
rand = "0.8"
criterion = "0.3"