[package]
name = "lightproc"
version = "0.3.0"
publish = false
description = "Lightweight process abstraction for Rust"
authors = []
keywords = ["fault-tolerant", "runtime", "actor", "system", "lightweight-process"]
categories = ["concurrency", "asynchronous"]
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2021"

[dependencies]
crossbeam-utils = "0.8"
pin-utils = "0.1.0"
bitfield = "0.13.2"
bitflags = "1.3.2"
tracing = "0.1"

[dev-dependencies]
crossbeam = "0.8"
futures-executor = "0.3"
lazy_static = "1.4.0"
async-std = "1.5"